--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
         <div class="container header-content">
-            <div class="logo">YUSUF<span>CREATIVES</span></div>
+            <div class="logo">GRGN<span>CREATIVES</span></div>
             <nav>
                 <div class="menu-toggle" id="menuToggle"><i class="fas fa-bars"></i></div>
                 <ul id="navMenu">
@@ -147,7 +147,7 @@
     <a href="https://instagram.com/yusufemiinn" target="_blank" class="fade-in"><i class="fab fa-instagram"></i></a>
 </div>
 
-                <p class="copyright fade-in">© 2025 Yusuf Creatives. Tüm Hakları Saklıdır.</p>
+                <p class="copyright fade-in">© 2025 GRGN Creatives. Tüm Hakları Saklıdır.</p>
             </div>
         </div>
     </footer>
